Replace deprecated `Locale` constructors with `Locale.of`